--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.2",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
@@ -38,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.7"
   }
 }
